# poacher

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  config.mk  roadmap.md
asciimath/: CMakeLists.txt  CMakePresets.json  readme.md
asciimath/cmake/: docs.cmake
asciimath/include/asciimath/: asciimath.hpp  parser.hpp  shunting-yard.hpp  symbols.hpp  token_defs.hpp  types.hpp  utils.hpp  variant.hpp
asciimath/src/: main.cpp
asciimath/tests/: CMakeLists.txt
asciimath/tests/asciimath/: parser.cpp  symbols.cpp  types.cpp
brainfog/: CMakeLists.txt  CMakePresets.json  readme.md
brainfog/benchmark/: CMakeLists.txt  compare.json  compare_ExecuteCompiler.json  compare_all.json
brainfog/benchmark/consecutive_loops/: pass_by_generator.cpp
brainfog/benchmark/hello_world/: flat.cpp  pass_by_generator.cpp
brainfog/benchmark/imbricated_loops/: et.cpp  flat.cpp  pass_by_generator.cpp
brainfog/benchmark/include/benchmark/: et.hpp  flat.hpp  pass_by_generator.hpp
brainfog/include/brainfog/: ast.hpp  driver.hpp  example_programs.hpp  parser.hpp  program.hpp
brainfog/include/brainfog/backends/: expression_template.hpp  flat.hpp  nttp.hpp  pass_by_generator.hpp
brainfog/include/brainfog/extra/: ios.hpp
brainfog/include/brainfog/ir/: expression_template.hpp  flat.hpp  nttp.hpp
brainfog/include/brainfog/parsers/: ctpg.hpp  naive.hpp
brainfog/include/brainfuck/: ast.hpp  driver.hpp  example_programs.hpp  parser.hpp
brainfog/include/brainfuck/backends/: expression_template.hpp  flat.hpp  nttp.hpp
brainfog/include/brainfuck/extra/: ios.hpp
brainfog/src/: main.cpp
brainfuck/: CMakeLists.txt  CMakePresets.json  readme.md
brainfuck/benchmark/: CMakeLists.txt  baseline.cpp  compare.json  compare_ExecuteCompiler.json  compare_all.json  main.cpp  readme.md  run.cpp
brainfuck/benchmark/consecutive_loops/: 01.cpp  02.cpp  03.cpp  04.cpp  05.cpp  10.cpp  20.cpp  30.cpp  40.cpp  et.cpp  flat.cpp  pass_by_generator.cpp
brainfuck/benchmark/hello_world/: 02.cpp  03.cpp  06.cpp  07.cpp  08.cpp  09.cpp  10.cpp  4.cpp  5.cpp  et.cpp  flat.cpp  pass_by_generator.cpp
brainfuck/benchmark/imbricated_loop/: 20.cpp
brainfuck/benchmark/imbricated_loops/: 02.cpp  03.cpp  04.cpp  05.cpp  10.cpp  30.cpp  40.cpp  et.cpp  flat.cpp
brainfuck/benchmark/include/benchmark/: et.hpp  flat.hpp  pass_by_generator.hpp
brainfuck/include/brainfuck/: ast.hpp  brainfuck.hpp  example_programs.hpp  parser.hpp  program.hpp
brainfuck/include/brainfuck/backends/: expression_template.hpp  flat.hpp  meta.hpp  pass_by_generator.hpp
brainfuck/include/brainfuck/backends/flat/: monolithic-codegen.hpp  monolithic-run.hpp  overloaded-codegen.hpp
brainfuck/include/brainfuck/ir/: expression_template.hpp  flat.hpp
brainfuck/include/brainfuck/parsers/: ctpg.hpp  naive.hpp
brainfuck/src/: main.cpp
cmake/: fetch_conan.cmake  fetch_implot.cmake  options.cmake
examples/: CMakeLists.txt  readme.md
examples/brainfuck/: CMakeLists.txt  readme.md
examples/brainfuck/include/brainfuck/: ast.hpp  ast_to_ir.hpp  ast_visitor.hpp  backends.hpp  brainfuck.hpp  extra.hpp  ir.hpp  ir_to_program.hpp  parser.hpp  program.hpp  utils.hpp
examples/brainfuck/include/brainfuck/backends/: cirle.hpp  expression_template.hpp  flat.hpp  meta.hpp  nttp.hpp
examples/brainfuck/include/brainfuck/extra/: ios.hpp
examples/brainfuck/src/: main.cpp
include/poacher/: brainfuck.hpp
shunting-yard/: CMakeLists.txt  CMakePresets.json  readme.md
shunting-yard-playground/: CMakeLists.txt
shunting-yard-playground/include/shunting-yard/: shunting-yard.hpp
shunting-yard-playground/src/: shunting-yard-inode.cpp
shunting-yard/benchmark/: CMakeLists.txt  compare_ExecuteCompiler.json  compare_InstantiateFunction.json  compare_all.json  debug.json
shunting-yard/benchmark/addition-series/: blaze-expression.cpp  formula-blaze.cpp  formula-no-blaze.cpp  no-formula-blaze.cpp  no-formula-no-blaze.cpp  text-formula.cpp  type-check.cpp
shunting-yard/cmake/: docs.cmake
shunting-yard/include/: rubbish_algebra.hpp  shunting_yard.hpp  tiny_math_language.hpp
shunting-yard/include/shunting-yard/: parse_to_rpn.hpp  rpn_to_literal.hpp  rpn_to_nttp.hpp  types.hpp
shunting-yard/src/: rubbish_algebra.cpp  shunting-yard.cpp  tiny_math_language.cpp
src/: main.cpp
tooling/: CMakeLists.txt  benchmark-grapher.cpp  readme.md  time-trace-wrapper.cpp
tooling/benchmark-grapher/: CMakeLists.txt
tooling/benchmark-grapher/include/grapher/: core.hpp  display.hpp  iostream.hpp  parsing.hpp
tooling/benchmark-grapher/src/: benchmark-grapher.cpp  display.cpp  iostream.cpp  parsing.cpp
